--- a/src/eShopWebApi.Infrastructure/eShopWebApi.Infrastructure.csproj
+++ b/src/eShopWebApi.Infrastructure/eShopWebApi.Infrastructure.csproj
@@ -5,7 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\eShopWebApi.Core\eShopWebApi.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
