Configure database via app settings.

--- a/src/eShopWebApi/appsettings.json
+++ b/src/eShopWebApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ApplicationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=eShopWebApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "eShopWebApi": {
+    "UseInMemoryApplicationDb": "false"
+  },
+
   "AllowedHosts": "*"
 }
