--- a/src/eShopWebApi/appsettings.json
+++ b/src/eShopWebApi/appsettings.json
@@ -12,7 +12,8 @@
   },
 
   "eShopWebApi": {
-    "UseInMemoryApplicationDb": "false"
+    "UseInMemoryApplicationDb": "false",
+    "ApplyDbMigrationIfNeeded":  "true"
   },
 
   "AllowedHosts": "*"
