--- a/src/eShopWebApi/appsettings.json
+++ b/src/eShopWebApi/appsettings.json
@@ -13,7 +13,9 @@
 
   "eShopWebApi": {
     "UseInMemoryApplicationDb": "false",
-    "ApplyDbMigrationIfNeeded":  "true"
+    "ApplyDbMigrationIfNeeded": "true",
+    "SeedDatabaseWithTestData":  "true",
+    "PathToInitProductsJsonFile": "Data/InitProductsDatabase.json"
   },
 
   "AllowedHosts": "*"
