Create base tests clases to easily use and seed in memory context

--- a/tests/eShopWebApi.InfrastructureTests/eShopWebApi.InfrastructureTests.csproj
+++ b/tests/eShopWebApi.InfrastructureTests/eShopWebApi.InfrastructureTests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\eShopWebApi.Infrastructure\eShopWebApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\eShopWebApi.SharedTests\eShopWebApi.SharedTests.csproj" />
   </ItemGroup>
 
 </Project>
