Improve swagger documentation
Remove unused code.

--- a/src/eShopWebApi/eShopWebApi.csproj
+++ b/src/eShopWebApi/eShopWebApi.csproj
@@ -5,6 +5,8 @@
     <UserSecretsId>05641b4a-9536-4e02-b00d-349e392002b6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileFile>..\..\Dockerfile</DockerfileFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
