--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ports: 
             - "5000:80"
         depends_on:
-            - database
+            - sqlserver
         environment:
             ConnectionStrings__ApplicationDbConnection: "Server=sqlserver;Database=eShopWebApi;User=sa;Password=SecretPassword123@eShopWebApi;MultipleActiveResultSets=true"
             eShopWebApi__UseInMemoryApplicationDb: "false"
